[build-system]
requires = ["setuptools>=64", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
fallback_version = "0.0"

[project]
classifiers = [
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
name = "nomad-distribution"
description = "nomad distribution template"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = ["nomad-lab[infrastructure]==1.4.2"]

[project.urls]
repository = "https://github.com/novalis-226/nomad_distro_jn"

[project.optional-dependencies]
# Add your plugins to the list below.
plugins = [
 "nomad-north-jupyter>=0.2.5",
  "nomad-hysprint @ git+https://github.com/nomad-hzb/nomad-hysprint.git@69c4d1e",
  "nomad-baseclasses @ git+https://github.com/nomad-hzb/nomad-baseclasses.git@6fb5775"
]

jupyter = ["jupyter-events"]
gpu-action = []
cpu-action = []

dev = ["nomad-lab[infrastructure, dev]==1.4.2"]

[tool.uv]
extra-index-url = [
  "https://gitlab.mpcdf.mpg.de/api/v4/projects/2187/packages/pypi/simple",
]
prerelease = "explicit"

[tool.setuptools.packages.find]
exclude = ["gui*", "docs*", "config*"]
